ISSUE-#27 Make slide background stretch to fit

--- a/src/components/slideview/SlideView.module.css
+++ b/src/components/slideview/SlideView.module.css
@@ -2,4 +2,7 @@
 {
   width: 100%;
   height: 100%;
+
+  background-repeat: no-repeat;
+  background-size: cover;
 }
